test/library/standard/List/extend/listExtendUnboundedRange.good
listExtendUnboundedRange.chpl:9: error: Cannot extend list(int(64),true) with unbounded range(int(64),boundedLow,false)
