test/library/standard/List/extend/listExtendUnboundedRange.chpl
private use List;

var lst: list(int, true);

const r = 1..;

writeln(r.type:string);

lst.extend(r);

